# oneup_solver

./: pyproject.toml
levels/: 01-29.json  02-08.json  02-15.json  hard.json  level1.txt  quarter-finals.json
src/grid/: __init__.py  grid.py  position.py
src/oneup/: __init__.py  actions.py  app.py  game.py  games.py  solver.py
src/oneup/solver/: __init__.py  actions.py  solver.py  strategy.py  types.py
